Bug 339172 - regression: settings for folders in "search messages" are completely ignored
Summary: regression: settings for folders in "search messages" are completely ignored
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: search (other bugs)
Version First Reported In: 4.14.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-18 13:43 UTC by piedro
Modified: 2014-11-03 22:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description piedro 2014-09-18 13:43:03 UTC
When explicitely searching in "only this folder" or "choosing folders" for any condition the search will not only show the mails of the designated folder but also mails from the deselected local folders and subfolders (also deselected "also search in subfolders" still finds mails in subfolders!) 

So my guess is that the folder selection in the "search messages" window has no functionality at all... 

 

Reproducible: Always

Steps to Reproduce:
1. select one single folder to search in 
2. search for "greetings" or another common term 
3. wait for the search results and look at the location of the mails found

Actual Results:  
Many results are located in previously deselected folders

Expected Results:  
well, a working folder selection...
Comment 1 Martin Tlustos 2014-10-28 09:01:19 UTC
still valid in kde 4.14.1.
It also shows mails from other imap accounts as well...
Comment 2 piedro 2014-11-03 00:14:14 UTC
At the moment the search functionality doesn't include the mails from "local folders" though explicitely selected...
Comment 3 Laurent Montel 2014-11-03 21:58:53 UTC
Git commit 0855fbfe599a2f52c4c4c3716f5b4ef5a07d6765 by Montel Laurent.
Committed on 03/11/2014 at 21:58.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 339172 - regression: settings for folders in "search messages" are completely ignored

(needs kdepim-runtime fix too)
FIXED-IN: 4.14.3

M  +5    -0    kmail/folderarchive/folderarchivemanager.cpp
M  +1    -0    kmail/folderarchive/folderarchivemanager.h
M  +5    -0    kmail/kmkernel.cpp
M  +2    -0    kmail/kmkernel.h

http://commits.kde.org/kdepim/0855fbfe599a2f52c4c4c3716f5b4ef5a07d6765
Comment 4 Laurent Montel 2014-11-03 22:01:08 UTC
Git commit b13ae1c5761ef4be1e199b257cff888afb195bed by Montel Laurent.
Committed on 03/11/2014 at 22:00.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 339172 - regression: settings for folders in "search messages" are completely ignored

FIXED-IN: 4.14.3

M  +10   -1    resources/folderarchivesettings/folderarchiveaccountinfo.cpp
M  +2    -0    resources/folderarchivesettings/folderarchiveaccountinfo.h
M  +12   -0    resources/folderarchivesettings/folderarchivesettingpage.cpp
M  +1    -1    resources/folderarchivesettings/folderarchiveutil.cpp

http://commits.kde.org/kdepim-runtime/b13ae1c5761ef4be1e199b257cff888afb195bed