Fix Bug 339172 - regression: settings for folders in "search messages" are completely ignored

(needs kdepim-runtime fix too)
FIXED-IN: 4.14.3
BUG: 339172