kmkernel.cpp
@@ -2071,6 +2071,11 @@ void KMKernel::showFolder(const QString &collectionId)
     }
 }
 
+void KMKernel::reloadFolderArchiveConfig()
+{
+    mFolderArchiveManager->reloadConfig();
+}
+
 void KMKernel::slotCollectionChanged(const Akonadi::Collection &, const QSet<QByteArray> &set)
 {
     if(set.contains("newmailnotifierattribute")) {
